--- a/index.html
+++ b/index.html
@@ -7,29 +7,27 @@
     <link rel="stylesheet" href="StyleSheet1.css" />
 </head>
 <body>
-  <h1>ClashM's Test Page</h1>
   <nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+	<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/cv">CV</a></li>
+		<li><a href="/blog">Blog</a></li>
+	</ul>
+	</nav>
   
     <div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-  
+	<div class="blurb">
+		<h1>Hi there, I'm Clash!</h1>
+			<p>I'm a terrible programmer who barely has a personality. <a href="/about">Read more about my life...</a></p>
+	</div><!-- /.blurb -->
+	</div><!-- /.container -->
+	<footer>
+	<ul>
+		<li><a href="https://github.com/clashm">github.com/hankquinlan</a></li>
+		</ul>
+	</footer>
+
     <script src="Script1.js"></script>
 </body>
 </html>
