--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div><!-- /.container -->
 	<footer>
 	<ul>
-		<li><a href="https://github.com/clashm">github.com/hankquinlan</a></li>
+		<li><a href="https://github.com/clashm">github.com/clashm</a></li>
 		</ul>
 	</footer>
 
