--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>ClashM's Page</title>
+    <title>Cameron's Page</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 <body>
@@ -18,7 +18,7 @@
   
     <div class="container">
 	<div class="blurb">
-		<h1>Hi there, I'm Clash!</h1>
+		<h1>Hi there, I'm Cameron!</h1>
 			<p>I'm a terrible programmer who barely has a personality. <a href="/about">Read more about my life...</a></p>
 	</div><!-- /.blurb -->
 	</div><!-- /.container -->
