--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 	<div class="blurb">
 		<h1>Hi there, I'm Cameron!</h1>
-			<p>I'm a terrible programmer who barely has a personality. <a href="/about">Read more about my life...</a></p>
+			<p>I'm a terrible programmer who barely has a personality.</p>
 	</div><!-- /.blurb -->
 	</div><!-- /.container -->
 	<footer>
